--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -112,7 +112,7 @@ body {
 }
 
 // Подключение стилей отдельных блоков
-@import "spollers";
+@import "base";
 @import "header";
 @import "footer";
 
